# launch-code-server

./: .gitignore  README.md  pyproject.toml
scripts/: run_ui.sh
src/launch_code_server/: client.py
ui/: app.py  launcher.py  storage.py  tasks.py
ui/data/tasks/: launch-32cea0604248.json  launch-b812cbd7bd1b.json
ui/diagnostics/: __init__.py  checks.py
ui/static/: app.css  styles.css
ui/templates/: base.html  base.jinja2  diagnostics.html  diagnostics.jinja2  diagnostics_results.jinja2  index.html  launch.html  launch.jinja2  launch_input_panel.jinja2  launch_status.jinja2  profile_form.html  profile_form.jinja2  profiles.html  profiles.jinja2  runs.html  runs.jinja2
