[project]
name = "launch-code-server"
version = "0.2.0"
description = "Launching vscode server with ease"
authors = [
    {name = "Kai Zhang",email = "zhangkai33@westlake.edu.cn"}
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn>=0.29,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
client = [
    "fabric >=3.2.2",
    "sshconf >=0.2.5",
]
ui = [
    "fastapi >=0.110.0",
    "jinja2 >=3.1.2",
    "python-multipart >=0.0.9",
    "uvicorn >=0.27.0",
]

[project.scripts]
launch_server = "launch_code_server.client:main"
vscode_server = "launch_code_server.server:main"
